# Sign Out Flow
appId: com.harpa.pro
tags:
  - auth
---
- runFlow: subflows/ensure-logged-in-mike.yaml

- tapOn:
    id: "btn-open-profile"
- waitForAnimationToEnd
- assertVisible: "Account Details"
- scrollUntilVisible:
    element:
      id: "btn-sign-out"
    direction: DOWN
- tapOn:
    id: "btn-sign-out"

- extendedWaitUntil:
    visible: "Demo Accounts"
    timeout: 10000
